# git_practice

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml
core/: settings.py
